<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_activity_layout_height"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pushDemoButton"
        android:layout_width="@dimen/main_activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/push_demo_button"
        app:layout_constraintBottom_toTopOf="@id/iapDemoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/iapDemoButton"
        android:layout_width="@dimen/main_activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/iap_demo_button"
        app:layout_constraintBottom_toTopOf="@id/adsDemoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pushDemoButton" />

    <Button
        android:id="@+id/adsDemoButton"
        android:layout_width="@dimen/main_activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/ads_demo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/accountDemoButton"
        android:layout_width="@dimen/main_activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/account_demo_button"
        app:layout_constraintBottom_toTopOf="@id/mapsDemoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adsDemoButton" />

    <Button
        android:id="@+id/mapsDemoButton"
        android:layout_width="@dimen/main_activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/maps_demo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountDemoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
